--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@mikro-orm/core": "^4.5.2",
     "@mikro-orm/migrations": "^4.5.2",
     "@mikro-orm/postgresql": "^4.5.2",
+    "apollo-server-express": "^2.22.2",
     "dotenv": "^8.2.0",
-    "pg": "^8.5.1"
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "pg": "^8.5.1",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/npm": "^2.0.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
