--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mikro-orm/core": "^4.5.2",
     "@mikro-orm/migrations": "^4.5.2",
     "@mikro-orm/postgresql": "^4.5.2",
+    "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.22.2",
+    "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/node": "^14.14.37",
     "@types/npm": "^2.0.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
