--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mikro-orm/postgresql": "^4.5.2",
     "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.22.2",
+    "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
+    "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "typescript": "^4.2.4"
   },
   "mikro-orm": {
+    "useTsNode": true,
     "configPaths": [
       "./src/mikro-orm.config.ts",
       "./dist/mikro-orm.config.js"
