--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "apollo-server-express": "^2.22.2",
     "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
+    "connect-redis": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
+    "redis": "^3.1.2",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1"
   },
