--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mikro-orm/core": "^4.5.2",
     "@mikro-orm/migrations": "^4.5.2",
     "@mikro-orm/postgresql": "^4.5.2",
+    "@types/connect-redis": "^0.0.16",
+    "@types/express-session": "^1.17.3",
     "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.22.2",
     "argon2": "^0.27.2",
