--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.0",
+    "nodemailer": "^6.6.2",
     "pg": "^8.5.1",
     "redis": "^3.1.2",
     "ts-node": "^9.1.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
+    "@types/nodemailer": "^6.4.2",
     "@types/npm": "^2.0.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
