--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mikro-orm/postgresql": "^4.5.2",
     "@types/connect-redis": "^0.0.16",
     "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.26.7",
+    "@types/uuid": "^8.3.1",
     "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.22.2",
     "argon2": "^0.27.2",
@@ -28,11 +30,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.0",
+    "ioredis": "^4.27.7",
     "nodemailer": "^6.6.2",
     "pg": "^8.5.1",
-    "redis": "^3.1.2",
     "ts-node": "^9.1.1",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
