--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.2",
-    "@mikro-orm/core": "^4.5.2",
-    "@mikro-orm/migrations": "^4.5.2",
-    "@mikro-orm/postgresql": "^4.5.2",
     "@types/connect-redis": "^0.0.16",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.26.7",
@@ -35,6 +31,7 @@
     "pg": "^8.5.1",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -44,12 +41,5 @@
     "@types/npm": "^2.0.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
