--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "tsc -w",
     "build": "tsc",
-    "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc-watch --onSuccess \"nodemon dist/index.js\"",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +39,7 @@
     "@types/nodemailer": "^6.4.2",
     "@types/npm": "^2.0.31",
     "nodemon": "^2.0.7",
+    "tsc-watch": "^4.5.0",
     "typescript": "^4.2.4"
   }
 }
