Initial docker-compose setup for dev (no-watch).
This commit configures docker-compose for development, with postgres and
redis services. It uses new env variables to account for Docker's
0.0.0.0 port. It does not watch for changes in files yet.

--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,10 @@
 PORT=4000
 
+DB_HOST=localhost
 DB_NAME=neo-reddit
 DB_USER=user
 DB_PASSWORD=password
+
+REDIS_HOST=localhost
 
 SESSION_SECRET=session_secret
