--- a/package.json
+++ b/package.json
@@ -24,23 +24,24 @@
     "ioredis": "^4.27.7",
     "nodemailer": "^6.6.2",
     "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "typescript": "^4.2.4",
-    "nodemon": "^2.0.7",
-    "tsc-watch": "^4.5.0",
-    "ts-node": "^9.1.1",
     "@types/connect-redis": "^0.0.16",
+    "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.26.7",
-    "@types/uuid": "^8.3.1",
-    "@types/validator": "^13.1.3",
-    "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
     "@types/nodemailer": "^6.4.2",
-    "@types/npm": "^2.0.31"
+    "@types/npm": "^2.0.31",
+    "@types/uuid": "^8.3.1",
+    "@types/validator": "^13.1.3",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "tsc-watch": "^4.5.0",
+    "typescript": "^4.2.4"
   }
 }
