--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
     "connect-redis": "^5.2.0",
+    "dataloader": "^2.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
