Add constant for CORS_ORIGIN

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       DB_PASSWORD: postgres
       REDIS_URL: redis
       SESSION_SECRET: my_secret
+      CORS_ORIGIN: http://localhost:3000
     depends_on:
       - postgres
       - redis
