--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,7 @@ services:
     command: "yarn dev"
     environment:
       PORT: 4000
-      DB_HOST: postgres
-      DB_NAME: neo-reddit-db
-      DB_USER: postgres
-      DB_PASSWORD: postgres
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/neo-reddit-db
       REDIS_URL: redis
       SESSION_SECRET: my_secret
       CORS_ORIGIN: http://localhost:3000
