--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "dev": "tsc-watch --onSuccess \"nodemon dist/index.js\"",
     "start": "node dist/index.js",
     "typeorm": "typeorm"
