--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc",
-    "dev": "tsc-watch --onSuccess \"nodemon dist/index.js\"",
+    "build": "yarn clean && tsc",
+    "clean": "rm -rf dist",
+    "dev": "yarn clean && tsc-watch --onSuccess \"nodemon dist/index.js\"",
     "start": "node dist/index.js",
     "typeorm": "typeorm"
   },
